初始化工程

--- a/.gitignore
+++ b/.gitignore
@@ -28,4 +28,18 @@ deps/lua/src/liblua.a
 .prerequisites
 *.dSYM
 Makefile.dep
+*.swp
+*.swo
+target
+.classpath
+.project
+.settings
+.svn
+output
 .idea
+*.iml
+*.pyc
+logs/
+*MANIFEST
+*artifacts
+.DS_Store
